Change letter for mail. Add students.

--- a/curriculum/cv.tex
+++ b/curriculum/cv.tex
@@ -17,6 +17,7 @@
 \hypersetup{urlcolor = orange}
 \usepackage[scale=0.75]{geometry}
 
+
 \newif\iflongcv
 \ifdefined\ActivateLONGCV % Must be passed as an option of latexmk see https://tex.stackexchange.com/questions/64245/latexmk-using-jobname-and-a-command-line-def
 	\longcvtrue
@@ -84,7 +85,7 @@ leftmargin=\hintscolumnwidth+\separatorcolumnwidth+\labelwidth+\labelsep}
 
 \section{Personal information and contact}
 	\cvitem{\faUser}{Born in Toulouse (France), May 8th 1989.}
-	\cvitem{\faEnvelopeO}{Bâtiment Sophie Germain,
+	\cvitem{\faEnvelope}{Bâtiment Sophie Germain,
 Université de Paris,
 75205 Paris CEDEX 13, France.}
 	\cvitem{\faAt}{guillaume.garrigos@lpsm.paris}
@@ -183,6 +184,11 @@ Université de Paris,
 	\cvitem{2017}{SMAI-MODE Dodu Prize for the best young researcher talk: \textit{Structured sparsity in inverse problems and support recovery with mirror-stratifiable functions}.}
 
 \section{Responsibilities}
+	\subsection{Student supervision}
+		\cvitem{2023}{Julien Marie-Anne. Undergrad project.}
+		\cvitem{2023}{Lucas Ketels. Undergrad thesis.}
+		\cvitem{2021-2024}{Massil Hihat. PhD thesis.}
+	
 	\subsection{Seminars, Events}
 		\cvitem{2019}{Co-organizer of the workshop "\textit{Regularisation for Inverse Problems and Machine Learning}", in Paris \link[\scriptsize{\faGlobe}]{https://invprob-ml-workshop.github.io/}}
 		\cvitem{2018}{Co-organizer of  the session "\textit{Dimensionality reduction tools for learning: A sketchy session}" for the International Symposium on Mathematical Programming (ISMP)}
