--- a/curriculum/cv.tex
+++ b/curriculum/cv.tex
@@ -83,6 +83,8 @@ leftmargin=\hintscolumnwidth+\separatorcolumnwidth+\labelwidth+\labelsep}
 \makecvtitle
 \pagestyle{empty}
 
+%\vspace*{-2em}
+
 \section{Personal information and contact}
 	\cvitem{\faUser}{Born in Toulouse (France), May 8th 1989.}
 	\cvitem{\faEnvelope}{Bâtiment Sophie Germain,
@@ -98,31 +100,37 @@ Université de Paris,
 		optimization, statistical machine learning, inverse problems, image and signal processing, algorithms and continuous dynamical systems, tame optimization.
 	}
 
-\section{Previous positions (2015--2018)}
+\section{Previous positions (2012--2018)}
 	\cventry{2017--2018}{Post-doc}{\'Ecole Normale Supérieure}{Paris, France}{}{
-		Lab: Département de Mathématiques et Applications
-		\newline{}%
+%		Lab: Département de Mathématiques et Applications
+%		\newline{}%
 		Main collaborator : Gabriel Peyr\'e (ENS, CNRS, INRIA)\newline{}%
 		Research themes : inverse problems, signal and image processing, optimization
 	}
 	\cventry{2015--2017}{Post-doc}{Istituto Italiano di Tecnologia}{Genoa, Italy}{}{
-		Lab: Laboratory for Computational and Statistical Learning
-		\newline{}%
+%		Lab: Laboratory for Computational and Statistical Learning
+%		\newline{}%
 		Main collaborators : Lorenzo Rosasco (IIT, MIT) and Silvia Villa (IIT)
 		\newline{}%
 		Research themes : optimization and regularization methods for machine learning.
 	}
+	\cventry{2012--2015}{Ph.D.}{Université de Montpellier \& Universidad Santa Maria}{France \& Chile}{}{
+		Supervisors : Hédy Attouch (UM) and Juan Peypouquet (USM)
+		\newline{}%
+		Subject : Dynamical systems for tame optimization and multi-objective problems \link[\scriptsize{\PaperPortrait}]{https://tel.archives-ouvertes.fr/tel-01245406}
+	}
+	
 
-\section{Ph.D. thesis (2012--2015)}
-	\cvitem{title}{\emph{Descent dynamical systems and algorithms for tame optimization and multi-objective problems} \link[\scriptsize{\PaperPortrait}]{https://tel.archives-ouvertes.fr/tel-01245406}}
-	\cvitem{university}{Université de Montpellier (France) and Universidad Santa Maria (Valparaíso, Chile)}
-	\cvitem{supervisors}{Hédy Attouch (UM) and Juan Peypouquet (USM)}
-	\cvitem{committee}{Hédy Attouch, Aris Daniilidis, Jalal Fadili, Pedro Gajardo, Adrian Lewis, Juan Peypouquet, Lionel Thibault}
+%\section{Ph.D. thesis (2012--2015)}
+%	\cvitem{title}{\emph{Descent dynamical systems and algorithms for tame optimization and multi-objective problems} \link[\scriptsize{\PaperPortrait}]{https://tel.archives-ouvertes.fr/tel-01245406}}
+%	\cvitem{university}{Université de Montpellier (France) and Universidad Santa Maria (Valparaíso, Chile)}
+%	\cvitem{supervisors}{Hédy Attouch (UM) and Juan Peypouquet (USM)}
+%	\cvitem{committee}{Hédy Attouch, Aris Daniilidis, Jalal Fadili, Pedro Gajardo, Adrian Lewis, Juan Peypouquet, Lionel Thibault}
 
 \section{Education and Degrees}
 	\cventry{2013}{Agrégation de Mathématiques}{}{ranked 147/323}{}{}
-	\cventry{2010--2012}{Master}{Université de Montpellier}{}{}{Mathématiques, Statistiques et Applications}  % arguments 3 to 6 can be left empty
-	\cventry{2007--2010}{Licence}{Université de Montpellier}{}{}{Mathématiques Fondamentales et Appliquées}
+	\cventry{2010--2012}{Master}{Université de Montpellier}{}{Mathématiques, Statistiques et Applications}{}  % arguments 3 to 6 can be left empty
+	\cventry{2007--2010}{Licence}{Université de Montpellier}{Mathématiques Fondamentales et Appliquées}{}{}
 	\cventry{2007}{Baccalauréat}{Lycée Diderot}{Narbonne}{}{}
 
 
@@ -157,6 +165,19 @@ Université de Paris,
 	
 	
 	
+	
+	
+\newpage
+
+
+
+
+
+
+
+
+
+
 \iflongcv{%	
 \section{Teaching} % Here we use data from teaching.csv
 \vspace*{-1em}
@@ -177,7 +198,6 @@ Université de Paris,
 }\fi % teaching
 	
 	
-	
 
 \section{Miscellaneous}
 	\cvitem{2019}{PEPS grant funded by INSMI (CNRS), 3,5k EUR.}
@@ -195,10 +215,12 @@ Université de Paris,
 		\cvitem{2017}{Organizer of the NORIA group meeting at ENS}
 		\cvitem{2017}{Co-organizer of the Machine Learning summer school RegML 2017, in Oslo \link[\scriptsize{\faGlobe}]{http://lcsl.mit.edu/courses/regml/regml2017/}}
 		\cvitem{2015--2017}{Organizer of the Machine Learning Tutorials, between the LCSL groups at IIT (Genova) and MIT (Boston)}
+\iflongcv{%
 	\subsection{Editorial Activity}
 		\cvitem{}{
 			I am reviewing for various journals: SIAM Journal on Optimization,  SIAM Journal on Imaging Science, Mathematics of Operations Research, Optimization, Mathematical Methods of Operations Research, Journal of Optimization Theory and Applications,  Computational and Applied Mathematics, IEEE Computational Intelligence Magazine.
 		}
+}\fi%
 
 \iflongcv{%
 \section{List of given research talks}
