--- a/curriculum/cv.tex
+++ b/curriculum/cv.tex
@@ -87,15 +87,14 @@ leftmargin=\hintscolumnwidth+\separatorcolumnwidth+\labelwidth+\labelsep}
 
 \section{Personal information and contact}
 	\cvitem{\faUser}{Born in Toulouse (France), May 8th 1989.}
-	\cvitem{\faEnvelope}{Bâtiment Sophie Germain,
-Université de Paris,
-75205 Paris CEDEX 13, France.}
+	\cvitem{\faEnvelope}{Université Paris Cité,
+Place Aurélie Nemours, 75013 Paris, France.}
 	\cvitem{\faAt}{guillaume.garrigos@lpsm.paris}
 	\cvitem{\faGlobe}{\link[http://guillaume-garrigos.com]{http://guillaume-garrigos.com}}
 
 \section{Current position (2018--~)}
-	\cvitem{position}{\textbf{Maître de conférences} at Université de Paris}
-	\cvitem{affiliation}{Laboratoire de Probabilités, Statistique et Modélisation (LPSM, UMR 8001)}
+	\cvitem{position}{\textbf{Maître de conférences} at Université Paris Cité}
+	\cvitem{affiliation}{Laboratoire de Probabilités, Statistique et Modélisation}
 	\cvitem{research interests}{
 		optimization, statistical machine learning, inverse problems, image and signal processing, algorithms and continuous dynamical systems, tame optimization.
 	}
