--- a/curriculum/cv.tex
+++ b/curriculum/cv.tex
@@ -204,6 +204,7 @@ Place Aurélie Nemours, 75013 Paris, France.}
 
 \section{Responsibilities}
 	\subsection{Student supervision}
+		\cvitem{2023-2026}{Lucas Ketels. PhD thesis.}
 		\cvitem{2023}{Julien Marie-Anne. Undergrad project.}
 		\cvitem{2023}{Lucas Ketels. Undergrad thesis.}
 		\cvitem{2021-2024}{Massil Hihat. PhD thesis.}
