--- a/curriculum/cv.tex
+++ b/curriculum/cv.tex
@@ -199,6 +199,7 @@ Place Aurélie Nemours, 75013 Paris, France.}
 	
 
 \section{Miscellaneous}
+	\cvitem{2021}{Idex grant for a pedagogical project funded by Université Paris Cité, 20k EUR.}
 	\cvitem{2019}{PEPS grant funded by INSMI (CNRS), 3,5k EUR.}
 	\cvitem{2017}{SMAI-MODE Dodu Prize for the best young researcher talk: \textit{Structured sparsity in inverse problems and support recovery with mirror-stratifiable functions}.}
 
