added new 2025 data

--- a/curriculum/cv.tex
+++ b/curriculum/cv.tex
@@ -205,12 +205,14 @@ Place Aurélie Nemours, 75013 Paris, France.}
 
 \section{Responsibilities}
 	\subsection{Student supervision}
-		\cvitem{2023-2026}{Lucas Ketels. PhD thesis.}
+		\cvitem{2025-2028}{Théo Moret. Undergrad + PhD thesis.}
+		\cvitem{2025}{Anastasiia Storozhenko. Undergrad project.}
+		\cvitem{2023-2027}{Lucas Ketels. Undergrad + PhD thesis.}
 		\cvitem{2023}{Julien Marie-Anne. Undergrad project.}
-		\cvitem{2023}{Lucas Ketels. Undergrad thesis.}
 		\cvitem{2021-2024}{Massil Hihat. PhD thesis.}
 	
 	\subsection{Seminars, Events}
+		\cvitem{2025}{Co-organizer of the reading group "\textit{Transformers}", at U. Paris Cité \link[\scriptsize{\faGlobe}]{https://guillaume-garrigos.com/gdt-transformers/}}
 		\cvitem{2019}{Co-organizer of the workshop "\textit{Regularisation for Inverse Problems and Machine Learning}", in Paris \link[\scriptsize{\faGlobe}]{https://invprob-ml-workshop.github.io/}}
 		\cvitem{2018}{Co-organizer of  the session "\textit{Dimensionality reduction tools for learning: A sketchy session}" for the International Symposium on Mathematical Programming (ISMP)}
 		\cvitem{2017}{Organizer of the NORIA group meeting at ENS}
